opam-version: "2.0"
maintainer: "Louis Roché <louis@louisroche.net>"
authors: "Louis Roché <louis@louisroche.net>"
homepage: "https://github.com/Khady/ocaml-argon2"
dev-repo: "git+https://github.com/Khady/ocaml-argon2.git"
bug-reports: "https://github.com/Khady/ocaml-argon2/issues"
doc: "https://khady.github.io/ocaml-argon2/"
license: "MIT"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.0"}
  "dune-configurator" {>= "2.0"}
  "ctypes" {>= "0.4.1"}
  "ctypes-foreign"
  "result"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]
depexts: [
  ["libargon2-dev"] {os-family = "debian"}
  ["libargon2-dev"] {os-family = "ubuntu"}
  ["libargon2-devel"] {os-distribution = "fedora"}
]
synopsis: "OCaml bindings to Argon2"
description: """
Based on argon2 library as described in https://github.com/P-H-C/phc-winner-argon2.

libargon2 must be installed on your system for this library to work.
"""
